@@ -51,9 +51,9 @@ copyright = u'2012, Modelon AB'
 # built documents.
 #
 # The short X.Y version.
-version = '2.9.4'
+version = '2.9.5'
 # The full version, including alpha/beta/rc tags.
-release = '2.9.4'
+release = '2.9.5'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -108,7 +108,7 @@ html_theme_options = {
 
 # The name for this set of Sphinx documents.  If None, it defaults to
 # "<project> v<release> documentation".
-html_title = "PyFMI 2.9.4 documentation"
+html_title = "PyFMI 2.9.5 documentation"
 
 # A shorter title for the navigation bar.  Default is the same as html_title.
 #html_short_title = None
